@@ -29,6 +29,7 @@ Template for new versions:
 ## New Tools
 
 ## New Features
+- `unforbid`: added ``-m/--metal-only`` option to only unforbid items made of metal
 
 ## Fixes
 
